--- a/estilos.css
+++ b/estilos.css
@@ -138,14 +138,19 @@ textarea{
 } /*fin de formularios*/
 /* ************************************ */
 /* Pie de Pagina */
+.pie{
+    width: 100%;
+    background-color: rgb(243, 215, 215);
+}
 footer{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 350px;
     gap: 5px;
+    overflow: hidden;
 }
 footer iframe{
-    margin-top: 20px ;
+    margin-top: 0;
     border-radius: 18px;
     width: 100%;
     height: 100%;
