--- a/estilos.css
+++ b/estilos.css
@@ -3,19 +3,21 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: 'IBM Plex Serif', serif;
-    font-family: 'Karla', sans-serif;
 }
 html{
     scroll-behavior: smooth;
 }
 body{
+    font-family: 'IBM Plex Serif', serif;
+    font-family: 'Karla', sans-serif;
     background-color: #f9ffff;
     min-height: 100vh;
 }
+
 .contenedor{
     width: 65%;
     margin: auto;
+
 }
 .menu{
     display: flex;
@@ -102,14 +104,11 @@ section{
     grid-template-rows: 400px 350px 420px;
     grid-gap: 5px;
 }
-.fotos:hover{
-    transform: scale(1.02);
-    transition: all 0.9s;
-}
 .img-foto{
     width: 100%;
     height: 100%;
 }
+
 /* Fin de Galeria */
 
 /* Inicio Formularios Contacto */
@@ -138,19 +137,14 @@ textarea{
 } /*fin de formularios*/
 /* ************************************ */
 /* Pie de Pagina */
-.pie{
-    width: 100%;
-    background-color: rgb(243, 215, 215);
-}
 footer{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 350px;
     gap: 5px;
-    overflow: hidden;
 }
 footer iframe{
-    margin-top: 0;
+    margin-top: 20px ;
     border-radius: 18px;
     width: 100%;
     height: 100%;
@@ -170,14 +164,6 @@ footer iframe{
     font-size: 30px;
 }
 @media screen and (min-width:480px) and (max-width: 599px){
-    .home{ /*corresponde a Inicio*/
-        height: 60vh;
-        background-image: url(imagenes/20191228_165918.jpg);
-        background-position: center;
-        background-size: cover;
-        margin-left: auto;
-        margin-right: auto;
-    }
     .galeri{
         display: grid;
         grid-template-columns: 1fr;
@@ -219,17 +205,17 @@ footer iframe{
         font-size: 16px;
         text-align: justify;
     }
-}
-
-@media screen and (min-width:600px) and (max-width: 799px){
     .home{ /*corresponde a Inicio*/
-        height: 80vh;
+        height: 60vh;
         background-image: url(imagenes/20191228_165918.jpg);
         background-position: center;
         background-size: cover;
         margin-left: auto;
         margin-right: auto;
     }
+}
+
+@media screen and (min-width:600px) and (max-width: 799px){
     .galeri{
         display: grid;
         grid-template-columns:  1fr;
@@ -276,18 +262,18 @@ footer iframe{
         font-size: 16px;
         text-align: justify;
     }
-    
-}
-
-@media screen and (min-width:800px) and (max-width: 1000px){
     .home{ /*corresponde a Inicio*/
-        height: 100vh;
+        height: 80vh;
         background-image: url(imagenes/20191228_165918.jpg);
         background-position: center;
         background-size: cover;
         margin-left: auto;
         margin-right: auto;
     }
+    
+}
+
+@media screen and (min-width:800px) and (max-width: 1000px){
     .galeri{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -321,17 +307,17 @@ footer iframe{
         font-size: 16px;
         text-align: justify;
     }
-
-}
-@media screen and (min-width:1001px) and (max-width: 1464px){
     .home{ /*corresponde a Inicio*/
-        height: 130vh;
+        height: 100vh;
         background-image: url(imagenes/20191228_165918.jpg);
         background-position: center;
         background-size: cover;
         margin-left: auto;
         margin-right: auto;
     }
+
+}
+@media screen and (min-width:1001px) and (max-width: 1464px){
     .menu{
         display: grid;
         grid-template-columns: 1fr
@@ -356,6 +342,14 @@ footer iframe{
         color: white;
         font-size: 16px;
         text-align: justify;
+    }
+    .home{ /*corresponde a Inicio*/
+        height: 130vh;
+        background-image: url(imagenes/20191228_165918.jpg);
+        background-position: center;
+        background-size: cover;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
