--- a/estilos.css
+++ b/estilos.css
@@ -3,21 +3,20 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: 'IBM Plex Serif', serif;
+    font-family: 'Karla', sans-serif;
 }
 html{
     scroll-behavior: smooth;
 }
 body{
-    font-family: 'IBM Plex Serif', serif;
-    font-family: 'Karla', sans-serif;
     background-color: #f9ffff;
     min-height: 100vh;
+    background-image: linear-gradient(white,#d6e0e0,rgb(212, 202, 202));
 }
-
 .contenedor{
     width: 65%;
     margin: auto;
-
 }
 .menu{
     display: flex;
@@ -25,7 +24,11 @@ body{
 }
 .logo{
     font-size: 23px;
-    line-height: 80px;    
+    line-height: 80px;   
+    animation-duration: 3s; 
+    animation-name: parpadear;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
 .logo:hover{
     border: 1px solid rgba(24, 21, 21, 0.4);
@@ -104,11 +107,14 @@ section{
     grid-template-rows: 400px 350px 420px;
     grid-gap: 5px;
 }
+.fotos:hover{
+    transform: scale(1.02);
+    transition: all 0.9s;
+}
 .img-foto{
     width: 100%;
     height: 100%;
 }
-
 /* Fin de Galeria */
 
 /* Inicio Formularios Contacto */
@@ -164,6 +170,14 @@ footer iframe{
     font-size: 30px;
 }
 @media screen and (min-width:480px) and (max-width: 599px){
+    .home{ /*corresponde a Inicio*/
+        height: 60vh;
+        background-image: url(imagenes/20191228_165918.jpg);
+        background-position: center;
+        background-size: cover;
+        margin-left: auto;
+        margin-right: auto;
+    }
     .galeri{
         display: grid;
         grid-template-columns: 1fr;
@@ -205,17 +219,17 @@ footer iframe{
         font-size: 16px;
         text-align: justify;
     }
+}
+
+@media screen and (min-width:600px) and (max-width: 799px){
     .home{ /*corresponde a Inicio*/
-        height: 60vh;
+        height: 80vh;
         background-image: url(imagenes/20191228_165918.jpg);
         background-position: center;
         background-size: cover;
         margin-left: auto;
         margin-right: auto;
     }
-}
-
-@media screen and (min-width:600px) and (max-width: 799px){
     .galeri{
         display: grid;
         grid-template-columns:  1fr;
@@ -262,18 +276,18 @@ footer iframe{
         font-size: 16px;
         text-align: justify;
     }
+    
+}
+
+@media screen and (min-width:800px) and (max-width: 1000px){
     .home{ /*corresponde a Inicio*/
-        height: 80vh;
+        height: 100vh;
         background-image: url(imagenes/20191228_165918.jpg);
         background-position: center;
         background-size: cover;
         margin-left: auto;
         margin-right: auto;
     }
-    
-}
-
-@media screen and (min-width:800px) and (max-width: 1000px){
     .galeri{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -307,17 +321,17 @@ footer iframe{
         font-size: 16px;
         text-align: justify;
     }
+
+}
+@media screen and (min-width:1001px) and (max-width: 1464px){
     .home{ /*corresponde a Inicio*/
-        height: 100vh;
+        height: 130vh;
         background-image: url(imagenes/20191228_165918.jpg);
         background-position: center;
         background-size: cover;
         margin-left: auto;
         margin-right: auto;
     }
-
-}
-@media screen and (min-width:1001px) and (max-width: 1464px){
     .menu{
         display: grid;
         grid-template-columns: 1fr
@@ -343,13 +357,13 @@ footer iframe{
         font-size: 16px;
         text-align: justify;
     }
-    .home{ /*corresponde a Inicio*/
-        height: 130vh;
-        background-image: url(imagenes/20191228_165918.jpg);
-        background-position: center;
-        background-size: cover;
-        margin-left: auto;
-        margin-right: auto;
+}
+@keyframes parpadear {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
     }
 }
 
