--- a/estilos.css
+++ b/estilos.css
@@ -12,6 +12,7 @@ html{
 body{
     background-color: #f9ffff;
     min-height: 100vh;
+    background-image: linear-gradient(white,#d6e0e0,rgb(212, 202, 202));
 }
 .contenedor{
     width: 65%;
@@ -23,7 +24,11 @@ body{
 }
 .logo{
     font-size: 23px;
-    line-height: 80px;    
+    line-height: 80px;   
+    animation-duration: 3s; 
+    animation-name: parpadear;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
 .logo:hover{
     border: 1px solid rgba(24, 21, 21, 0.4);
@@ -150,7 +155,7 @@ footer{
     overflow: hidden;
 }
 footer iframe{
-    margin-top: 0;
+    margin-top: 0; /*elimino el margen superior del Iframe con respecto al Footer*/
     border-radius: 18px;
     width: 100%;
     height: 100%;
@@ -357,6 +362,15 @@ footer iframe{
         font-size: 16px;
         text-align: justify;
     }
+}
+@keyframes parpadear {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+    
 }
 
 
