--- a/estilos.css
+++ b/estilos.css
@@ -16,7 +16,7 @@ body{
     ,rgb(212, 202, 202),#000);
 }
 .contenedor{
-    width: 65%;
+    width: 66%;
     margin: auto;
 }
 .menu{
@@ -33,11 +33,18 @@ body{
 }
 .logo:hover{
     border: 1px solid rgba(24, 21, 21, 0.4);
+    text-decoration: none;
 }
 .clima{
     position: relative;
     line-height: 110px;
     margin-left: 5px;
+}
+.climaInicio{
+    position: relative;
+    line-height: 90px;
+    margin-left: 5px;
+
 }
 .menu .enlaces a {
     list-style: none;
@@ -48,6 +55,7 @@ body{
 }
 .menu .enlaces a:hover{
     border: 1px solid rgba(24, 21, 21, 0.4);
+    text-decoration: none;
 }
 a{
     color: rgb(30, 26, 26); /*color de texto de los nav */
@@ -77,23 +85,22 @@ li{
     height: 80px;
     background-image: url(imagenes/whatsapp.png);
     background-repeat: no-repeat;
-
-
-
 }
 .home{ /*corresponde a Inicio*/
-    height: 170vh;
+    width: 1110px;
+    height: 155vh;
     background-image: url(imagenes/20191228_165918.jpg);
     background-position: center;
     background-size: cover;
     margin-left: auto;
     margin-right: auto;
 }
-.info{
-    width: 30%;
+.home .info{
+    width: 400px;
     height: 180px;
     background-color: transparent;
-    padding: 5px;
+    position: relative;
+    margin-left: 0;
 }
 .info h1{
     color: white;
@@ -101,9 +108,10 @@ li{
     text-align: center;
 }
 .info p{
+    width: 100%;
     color: white;
     font-size: 25px;
-    text-align: justify;
+    text-align: center;
 }
 .info a {
     color: rgb(56, 52, 52);
@@ -111,6 +119,15 @@ li{
     padding: 8px;
     border-radius: 18px;
     font-size: 16px;
+}
+.info a{
+    position: relative;
+    left: 20px;
+    top: 0;
+}
+.fotoCarrusel{
+    padding: 5px;
+    background-color: white;
 }
 /* Servicios */
 section{
@@ -147,10 +164,12 @@ section{
 /* Inicio Formularios Contacto */
 fieldset{
     background-color: rgb(223, 241, 247);
+    border: transparent;
 }
 legend{
     text-align: center;
     font-size: 20px;
+
 }
 form{
     width: 450px;
