--- a/estilos.css
+++ b/estilos.css
@@ -23,9 +23,12 @@ body{
     display: flex;
     justify-content: space-between; /*separa los cajas/contenedores*/
 }
+.tobati{
+    padding: 5px 5px 5px 0px;
+}
 .logo{
     font-size: 23px;
-    line-height: 80px;   
+    line-height: 50px;   
     animation-duration: 2s; 
     animation-name: parpadear;
     animation-direction: alternate;
@@ -35,9 +38,18 @@ body{
     border: 1px solid rgba(24, 21, 21, 0.4);
     text-decoration: none;
 }
+.espan1{
+    background-color: rgb(245, 61, 44);
+}
+.espan2{
+    background-color: white;
+}
+.espan3{
+    background-color: rgb(52, 52, 235);
+}
 .clima{
     position: relative;
-    line-height: 110px;
+    line-height: 80px;
     margin-left: 5px;
 }
 .climaInicio{
@@ -50,7 +62,7 @@ body{
     list-style: none;
     font-size: 23px; /*tamanio de letra*/
     margin: 0 10px ;
-    line-height: 80px;
+    line-height: 110px;
     border: 1px solid transparent;
 }
 .menu .enlaces a:hover{
@@ -163,7 +175,6 @@ section{
 
 /* Inicio Formularios Contacto */
 fieldset{
-    background-color: rgb(223, 241, 247);
     border: transparent;
 }
 legend{
@@ -190,10 +201,16 @@ textarea{
 /* ************************************ */
 /* Pie de Pagina */
 footer{
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 350px;
-    gap: 5px;
+    gap: 5px; */
+}
+.pie{
+    height: 300px;
+    padding: 0;
+    margin: 0;
+    gap: 0;
 }
 footer iframe{
     margin-top: 0; /*elimino el margen superior del Iframe con respecto al Footer*/
