--- a/estilos.css
+++ b/estilos.css
@@ -53,6 +53,9 @@ body{
     line-height: 80px;
     margin-left: 5px;
 }
+.info{
+    background-color: transparent;
+}
 .climaInicio{
     position: relative;
     line-height: 90px;
@@ -108,36 +111,7 @@ li{
     margin-left: auto;
     margin-right: auto;
 }
-.home .info{
-    width: 400px;
-    height: 180px;
-    background-color: transparent;
-    position: relative;
-    margin-left: 0;
-}
-.info h1{
-    color: white;
-    font-size: 40px;
-    text-align: center;
-}
-.info p{
-    width: 100%;
-    color: white;
-    font-size: 25px;
-    text-align: center;
-}
-.info a {
-    color: rgb(56, 52, 52);
-    background-color: rgb(163, 245, 188);
-    padding: 8px;
-    border-radius: 18px;
-    font-size: 16px;
-}
-.info a{
-    position: relative;
-    left: 20px;
-    top: 0;
-}
+
 .fotoCarrusel{
     padding: 5px;
     background-color: white;
@@ -230,6 +204,10 @@ footer i{
     padding: 0;
     margin: 0;
     gap: 0;
+    overflow: auto;
+}
+.fotoPie{
+    border-radius: 18px;
 }
 footer iframe{
     margin-top: 0; /*elimino el margen superior del Iframe con respecto al Footer*/
