--- a/estilos.css
+++ b/estilos.css
@@ -28,9 +28,9 @@ body{
     border-radius: 50%;
 }
 .logo{
-    font-size: 23px;
-    line-height: 50px;   
-    animation-duration: 2s; 
+    font-size: 20px;
+    line-height: 50px;  
+    animation-duration: 4s; 
     animation-name: parpadear;
     animation-direction: alternate;
     animation-iteration-count: infinite;
@@ -40,31 +40,30 @@ body{
     text-decoration: none;
 }
 .espan1{
+    color: #282828;
     background-color: rgb(245, 61, 44);
 }
 .espan2{
+    color: #282828;
     background-color: white;
 }
 .espan3{
+    color: #282828;
     background-color: rgb(52, 52, 235);
 }
 .clima{
     position: relative;
-    line-height: 80px;
+    line-height: 110px;
     margin-left: 5px;
-}
-.info{
-    background-color: transparent;
 }
 .climaInicio{
     position: relative;
-    line-height: 90px;
+    line-height: 110px;
     margin-left: 5px;
-
 }
 .menu .enlaces a {
     list-style: none;
-    font-size: 23px; /*tamanio de letra*/
+    font-size: 20px; /*tamanio de letra*/
     margin: 0 10px ;
     line-height: 110px;
     border: 1px solid transparent;
@@ -167,7 +166,6 @@ fieldset{
 legend{
     text-align: center;
     font-size: 20px;
-
 }
 form{
     width: 450px;
@@ -202,7 +200,6 @@ footer i{
     font-size: 50px;    
     letter-spacing: 25px;
     line-height: 150px;
-
 }
 .pie{
     height: 300px;
@@ -223,7 +220,7 @@ footer iframe{
 #cont_04575148dc559c948cf6a66f3f7628f6{
     border-radius: 18px;
 }
-
+/***BOTONES LATERALES***/
 .ini{
     width: 40px;
     height: 40px;
@@ -249,7 +246,7 @@ footer iframe{
     background-color: #000;
     line-height: 40px;
     border-radius: 50%;
-    animation-duration: 2s; 
+    animation-duration: 4s; 
     animation-name: subida;
     animation-direction: alternate;
     animation-iteration-count: infinite;
@@ -304,21 +301,6 @@ footer iframe{
     .enlaces a{
         width: 100px;
     }
-    .info{
-        width: 100%;
-        height: 130px;
-        background-color: transparent;
-    }
-    .info h1{
-        color: white;
-        font-size: 30px;
-        text-align: center;
-    }
-    .info p{
-        color: white;
-        font-size: 16px;
-        text-align: justify;
-    }
 }
 
 @media screen and (min-width:600px) and (max-width: 799px){
@@ -355,23 +337,7 @@ footer iframe{
     }
     .enlaces .ini{
         display: none;
-    }
-    .info{
-        width: 90%;
-        height: 100px;
-        background-color: transparent;
-    }
-    .info h1{
-        color: white;
-        font-size: 30px;
-        text-align: center;
-    }
-    .info p{
-        color: white;
-        font-size: 16px;
-        text-align: justify;
-    }
-    
+    }  
 }
 @media screen and (min-width:800px) and (max-width: 1000px){
     .home{ /*corresponde a Inicio*/
@@ -404,22 +370,6 @@ footer iframe{
     .enlaces a{
         width: 90px;
     }
-    .info{
-        width: 60%;
-        height: 100px;
-        background-color: transparent;
-    }
-    .info h1{
-        color: white;
-        font-size: 30px;
-        text-align: center;
-    }
-    .info p{
-        color: white;
-        font-size: 16px;
-        text-align: justify;
-    }
-
 }
 @media screen and (min-width:1001px) and (max-width: 1464px){
     .home{ /*corresponde a Inicio*/
@@ -444,20 +394,6 @@ footer iframe{
     .enlaces a{
         width: 90px;
     }
-    .info{
-        width: 60%;
-        height: 100px;
-        background-color: transparent;
-    }
-    .info h1{
-        color: white;
-        font-size: 30px;
-        text-align: center;
-    }
-    .info p{
-        color: white;
-        font-size: 16px;
-        text-align: justify;
-    }
+ 
 }
 
