--- a/estilos.css
+++ b/estilos.css
@@ -30,7 +30,7 @@ body{
 .logo{
     font-size: 20px;
     line-height: 50px;  
-    animation-duration: 4s; 
+    animation-duration: 10s; 
     animation-name: parpadear;
     animation-direction: alternate;
     animation-iteration-count: infinite;
@@ -80,27 +80,15 @@ li{
     list-style: none;
 }
 .social-media{
-    background-color: rgb(227, 222, 222);
     width: 60px;
-    height: 80px;
-    font-size: 20px;
-    margin-left: 20px;
+    height: auto;
+    font-size: 30px;
     position: fixed;
     top: 35%;
-    margin-left: 2px;
+    margin-left: 5px;
 }
-.social-media ul{
-    width: 100%;
-    height: auto;
-    display: block;
-    
-}
-.social-media ul li a{
-    width: 100%;
-    height: 80px;
-    background-image: url(imagenes/whatsapp.png);
-    background-repeat: no-repeat;
-}
+
+
 .home{ /*corresponde a Index*/
     width: 1110px;
     height: 190vh;
@@ -175,8 +163,9 @@ form{
 input, textarea{
     width: 100%;
     margin-bottom: 20px; /*margen arriba*/
-    padding: 7px;
-    font-size: 20px;
+    padding: 3px;
+    font-size: 15px;
+    border-radius: 5px;
 }
 textarea{
     min-height: 100px;
@@ -222,8 +211,8 @@ footer iframe{
 }
 /***BOTONES LATERALES***/
 .ini{
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     position: fixed;
     top: 35px;
     right: 40px;
@@ -231,12 +220,12 @@ footer iframe{
     font-size: 20px;
     color: white;
     background-color: #000;
-    line-height: 40px;
+    line-height: 35px;
     border-radius: 50%;  
 }
 .subir{
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     position: fixed;
     bottom: 40px;
     right: 40px;
@@ -244,7 +233,7 @@ footer iframe{
     font-size: 20px;
     color: white;
     background-color: #000;
-    line-height: 40px;
+    line-height: 35px;
     border-radius: 50%;
     animation-duration: 4s; 
     animation-name: subida;
@@ -252,6 +241,7 @@ footer iframe{
     animation-iteration-count: infinite;
 }
 /***ZONA DE ANIMACIONES***/
+
 @keyframes parpadear { /*LOGO*/
     0%{
         opacity: 0;
@@ -280,7 +270,7 @@ footer iframe{
         margin-left: auto;
         margin-right: auto;
     }
-    .fotoCarrusel img{
+    .fotoCarrusel img{ /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
         width: 49.6%;
         height: 250px;
     }
@@ -312,7 +302,7 @@ footer iframe{
         margin-left: auto;
         margin-right: auto;
     }
-    .fotoCarrusel img{
+    .fotoCarrusel img{ /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
         width: 49.5%;
         height: 250px;
     }
@@ -321,7 +311,6 @@ footer iframe{
         grid-template-columns:  1fr;
         grid-template-rows: repeat(9, 1fr)
     }
-    
     .menu{
         display: grid;
         grid-template-columns: 1fr
@@ -332,12 +321,7 @@ footer iframe{
     .enlaces a{
         width: 90px;
     }
-    .enlaces .icon-home{
-        display: none;
-    }
-    .enlaces .ini{
-        display: none;
-    }  
+   
 }
 @media screen and (min-width:800px) and (max-width: 1000px){
     .home{ /*corresponde a Inicio*/
@@ -348,7 +332,7 @@ footer iframe{
         margin-left: auto;
         margin-right: auto;
     }
-    .fotoCarrusel img{
+    .fotoCarrusel img{ /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
         width: 49.7%;
         height: 250px;
     }
@@ -380,7 +364,7 @@ footer iframe{
         margin-left: auto;
         margin-right: auto;
     }
-    .fotoCarrusel img{
+    .fotoCarrusel img{ /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
         width: 49.7%;
         height: 250px;
     }
@@ -394,6 +378,5 @@ footer iframe{
     .enlaces a{
         width: 90px;
     }
- 
 }
 
