--- a/estilos.css
+++ b/estilos.css
@@ -1,382 +1,450 @@
-/* reseteamos los margenes y espacios interiores del navegador */
-*{ 
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: 'IBM Plex Serif', serif;
-    font-family: 'Karla', sans-serif;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "IBM Plex Serif", serif;
+  font-family: "Karla", sans-serif;
 }
-html{
-    scroll-behavior: smooth;
+
+html {
+  scroll-behavior: smooth;
 }
-body{
-    background-color: #f9ffff;
-    min-height: 100vh;
-    background-image: linear-gradient(white,#f9ffff,#ededed,rgb(234, 232, 232)
-    ,rgb(212, 202, 202),rgba(78, 74, 74, 0.544));
+
+body {
+  background-color: #f9ffff;
+  min-height: 100vh;
+  background-image: linear-gradient(white, #f9ffff, #ededed, rgb(234, 232, 232), rgb(212, 202, 202), rgba(78, 74, 74, 0.544));
 }
-.contenedor{
-    width: 66%;
-    margin: auto;
+
+.contenedor {
+  width: 66%;
+  margin: auto;
 }
-.menu{
-    display: flex;
-    justify-content: space-between; /*separa los cajas/contenedores*/
+
+.menu {
+  display: flex;
+  justify-content: space-between;
 }
-.tobati{
-    padding: 5px 5px 5px 0px;
-    border-radius: 50%;
+.menu .tobati {
+  padding: 5px 5px 5px 0px;
+  border-radius: 50%;
 }
-.logo{
-    font-size: 20px;
-    line-height: 50px;  
-    animation-duration: 10s; 
-    animation-name: parpadear;
-    animation-direction: alternate;
-    animation-iteration-count: infinite;
+.menu .logo {
+  font-size: 20px;
+  line-height: 50px;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+  -webkit-animation-name: parpadear;
+          animation-name: parpadear;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
 }
-.logo:hover{
-    border: 1px solid rgba(24, 21, 21, 0.4);
-    text-decoration: none;
+.menu .espan1 {
+  color: #282828;
+  background-color: rgb(245, 61, 44);
 }
-.espan1{
-    color: #282828;
-    background-color: rgb(245, 61, 44);
+.menu .espan2 {
+  color: #282828;
+  background-color: white;
 }
-.espan2{
-    color: #282828;
-    background-color: white;
+.menu .espan3 {
+  color: #282828;
+  background-color: rgb(52, 52, 235);
 }
-.espan3{
-    color: #282828;
-    background-color: rgb(52, 52, 235);
+
+.logo:hover {
+  border: 1px solid rgba(24, 21, 21, 0.4);
+  text-decoration: none;
 }
-.clima{
-    position: relative;
-    line-height: 110px;
-    margin-left: 5px;
+
+.clima {
+  position: relative;
+  line-height: 110px;
+  margin-left: 5px;
 }
-.climaInicio{
-    position: relative;
-    line-height: 110px;
-    margin-left: 5px;
+
+.climaInicio {
+  position: relative;
+  line-height: 110px;
+  margin-left: 5px;
 }
+
 .menu .enlaces a {
-    list-style: none;
-    font-size: 20px; /*tamanio de letra*/
-    margin: 0 10px ;
-    line-height: 110px;
-    border: 1px solid transparent;
+  list-style: none;
+  font-size: 20px;
+  margin: 0 10px;
+  line-height: 110px;
+  border: 1px solid transparent;
 }
-.menu .enlaces a:hover{
-    border: 1px solid rgba(24, 21, 21, 0.4);
-    text-decoration: none;
-}
-a{
-    color: rgb(30, 26, 26); /*color de texto de los nav */
-    text-decoration: none;
-}
-li{
-    list-style: none;
-}
-.social-media{
-    width: 60px;
-    height: auto;
-    font-size: 30px;
-    position: fixed;
-    top: 35%;
-    margin-left: 5px;
+.menu .enlaces a:hover {
+  border: 1px solid rgba(24, 21, 21, 0.4);
+  text-decoration: none;
 }
 
+a {
+  color: rgb(30, 26, 26);
+  text-decoration: none;
+}
 
-.home{ /*corresponde a Index*/
-    width: 1110px;
-    height: 190vh;
+li {
+  list-style: none;
+}
+
+.social-media {
+  width: 60px;
+  height: auto;
+  font-size: 30px;
+  position: fixed;
+  top: 35%;
+  margin-left: 5px;
+  z-index: 999;
+}
+.social-media ul li a:hover {
+  padding: 0 5px;
+}
+
+.home {
+  width: 1110px;
+  height: 190vh;
+  background-image: url(imagenes/20191228_165918.jpg);
+  background-position: center;
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.conte-carru {
+  margin-top: 30px;
+}
+
+.carousel-indicators li {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+
+.fotoCarrusel {
+  border-radius: 15px;
+}
+
+.section {
+  background-color: rgb(223, 243, 249);
+  border: 2px solid;
+  height: 400px;
+  text-align: center;
+}
+
+.card {
+  margin: auto;
+  text-align: center;
+}
+
+.secciones {
+  width: 100%;
+}
+
+.galeri {
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 400px 350px 420px;
+  grid-gap: 5px;
+}
+
+.img-foto:hover {
+  transform: scale(1.02);
+  transition: all 0.9s;
+}
+
+.img-foto {
+  width: 100%;
+  height: 100%;
+}
+
+fieldset {
+  border: transparent;
+}
+
+legend {
+  text-align: center;
+  font-size: 20px;
+}
+
+form {
+  width: 450px;
+  margin: auto;
+  padding: 10px 20px;
+}
+
+input, textarea {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 3px;
+  font-size: 15px;
+  border-radius: 5px;
+}
+
+textarea {
+  min-height: 100px;
+  max-height: 200px;
+  max-width: 100%;
+}
+
+/* ************************************ */
+footer {
+  text-align: center;
+  margin-top: 30px;
+}
+footer p {
+  font-size: 26px;
+  text-transform: capitalize;
+}
+footer i {
+  font-size: 50px;
+  letter-spacing: 25px;
+  line-height: 150px;
+}
+footer iframe {
+  margin-top: 0;
+  border-radius: 18px;
+  width: 100%;
+  height: 60%;
+}
+
+.pie {
+  height: auto;
+  padding: 0;
+}
+
+.fotoPie {
+  border-radius: 18px;
+}
+
+#cont_04575148dc559c948cf6a66f3f7628f6 {
+  border-radius: 18px;
+}
+
+.ini {
+  width: 35px;
+  height: 35px;
+  position: fixed;
+  top: 35px;
+  right: 40px;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  background-color: #000;
+  line-height: 35px;
+  border-radius: 50%;
+}
+
+.subir {
+  width: 35px;
+  height: 35px;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  background-color: #000;
+  line-height: 35px;
+  border-radius: 50%;
+  -webkit-animation-duration: 4s;
+          animation-duration: 4s;
+  -webkit-animation-name: subida;
+          animation-name: subida;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes parpadear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes parpadear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes subida {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes subida {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 599px) {
+  .home {
+    /*corresponde a Inicio*/
+    height: 60vh;
     background-image: url(imagenes/20191228_165918.jpg);
     background-position: center;
     background-size: cover;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .fotoCarrusel img {
+    /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
+    width: 49.6%;
+    height: 250px;
+  }
+
+  .galeri {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(9, 2fr);
+  }
+
+  .menu {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .enlaces {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .enlaces a {
+    width: 100px;
+  }
+
+  .pie iframe {
+    height: 250px;
+  }
 }
-.carousel-indicators li{
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-}
-.fotoCarrusel{
-    padding: 5px;
-    background-color: white;
-}
-/*Fin de Index*/
-/* Servicios */
-.section{
-    background-color: rgb(223, 243, 249);
-    border: 2px solid;   
-    height: 400px;
-    text-align: center;
-}
-.card{
-    margin: auto;
-    text-align: center;
-}
-/***NOTICIAS***/
-.secciones{
-    /* display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 400px 400px 400px;
-    grid-gap: 5px; */
-    width: 100%;
-}
-/***FIN NOTICIAS***/
-/* Galeria de imagenes */
-.galeri{
+@media screen and (min-width: 600px) and (max-width: 799px) {
+  .home {
+    /*corresponde a Inicio*/
+    height: 80vh;
+    background-image: url(imagenes/20191228_165918.jpg);
+    background-position: center;
+    background-size: cover;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .fotoCarrusel img {
+    /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
+    width: 49.5%;
+    height: 250px;
+  }
+
+  .galeri {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 400px 350px 420px;
-    grid-gap: 5px;
-}
-.img-foto:hover{
-    transform: scale(1.02);
-    transition: all 0.9s;
-}
-.img-foto{
-    width: 100%;
-    height: 100%;
-}
-/* Fin de Galeria */
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(9, 1fr);
+  }
 
-/* Inicio Formularios Contacto */
-fieldset{
-    border: transparent;
-}
-legend{
-    text-align: center;
-    font-size: 20px;
-}
-form{
-    width: 450px;
-    margin: auto; /*queda centrado todo el formulario*/
-    padding: 10px 20px; /* relleno vertical y horizontal*/
-}
-input, textarea{
-    width: 100%;
-    margin-bottom: 20px; /*margen arriba*/
-    padding: 3px;
-    font-size: 15px;
-    border-radius: 5px;
-}
-textarea{
-    min-height: 100px;
-    max-height: 200px;
-    max-width: 100%;
-} /*fin de formularios*/
-/* ************************************ */
-/* Pie de Pagina */
-footer{
-    /* display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 350px;
-    gap: 5px; */
-    text-align: center;
-}
-footer p{
-    font-size: 26px;
-    text-transform: capitalize;
-}
-footer i{
-    font-size: 50px;    
-    letter-spacing: 25px;
-    line-height: 150px;
-}
-.pie{
-    height: 300px;
-    padding: 0;
-    margin: 0;
-    gap: 0;
-    overflow: auto;
-}
-.fotoPie{
-    border-radius: 18px;
-}
-footer iframe{
-    margin-top: 0; /*elimino el margen superior del Iframe con respecto al Footer*/
-    border-radius: 18px;
-    width: 100%;
-    height: 100%;
-}
-#cont_04575148dc559c948cf6a66f3f7628f6{
-    border-radius: 18px;
-}
-/***BOTONES LATERALES***/
-.ini{
-    width: 35px;
-    height: 35px;
-    position: fixed;
-    top: 35px;
-    right: 40px;
-    text-align: center;
-    font-size: 20px;
-    color: white;
-    background-color: #000;
-    line-height: 35px;
-    border-radius: 50%;  
-}
-.subir{
-    width: 35px;
-    height: 35px;
-    position: fixed;
-    bottom: 40px;
-    right: 40px;
-    text-align: center;
-    font-size: 20px;
-    color: white;
-    background-color: #000;
-    line-height: 35px;
-    border-radius: 50%;
-    animation-duration: 4s; 
-    animation-name: subida;
-    animation-direction: alternate;
-    animation-iteration-count: infinite;
-}
-/***ZONA DE ANIMACIONES***/
+  .menu {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 
-@keyframes parpadear { /*LOGO*/
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    } 
-}
-@keyframes subida { /*BOTON DE SUBIR*/
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    } 
-}
-/***FIN ZONA DE ANIMACIONES***/
+  .enlaces {
+    width: 150%;
+  }
 
-/**** ZONA DE MEDIA QUERIES ****/
-@media screen and (min-width:480px) and (max-width: 599px){
-    .home{ /*corresponde a Inicio*/
-        height: 60vh;
-        background-image: url(imagenes/20191228_165918.jpg);
-        background-position: center;
-        background-size: cover;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .fotoCarrusel img{ /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
-        width: 49.6%;
-        height: 250px;
-    }
-    .galeri{
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(9, 2fr);
-    }
+  .enlaces a {
+    width: 90px;
+  }
 
-    .menu{
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-    .enlaces{
-        display: flex;
-        flex-direction: column;
-    }
-    .enlaces a{
-        width: 100px;
-    }
+  .pie iframe {
+    height: 280px;
+  }
 }
+@media screen and (min-width: 800px) and (max-width: 1000px) {
+  .home {
+    /*corresponde a Inicio*/
+    height: 100vh;
+    background-image: url(imagenes/20191228_165918.jpg);
+    background-position: center;
+    background-size: cover;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-@media screen and (min-width:600px) and (max-width: 799px){
-    .home{ /*corresponde a Inicio*/
-        height: 80vh;
-        background-image: url(imagenes/20191228_165918.jpg);
-        background-position: center;
-        background-size: cover;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .fotoCarrusel img{ /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
-        width: 49.5%;
-        height: 250px;
-    }
-    .galeri{
-        display: grid;
-        grid-template-columns:  1fr;
-        grid-template-rows: repeat(9, 1fr)
-    }
-    .menu{
-        display: grid;
-        grid-template-columns: 1fr
-    }
-    .enlaces{
-        width: 150%;
-    }
-    .enlaces a{
-        width: 90px;
-    }
-   
-}
-@media screen and (min-width:800px) and (max-width: 1000px){
-    .home{ /*corresponde a Inicio*/
-        height: 100vh;
-        background-image: url(imagenes/20191228_165918.jpg);
-        background-position: center;
-        background-size: cover;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .fotoCarrusel img{ /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
-        width: 49.7%;
-        height: 250px;
-    }
-    .galeri{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr); /*repetir 2 columnas, una fraccion c/u */
-        grid-template-rows: 300px 300px 300px 300px 450px;
-    }
-    .foto9{
-        grid-column: 1/3;
-    }
-    .menu{
-        display: grid;
-        grid-template-columns: 1fr
-    }
-    .enlaces{
-        width: 150%;
-    }
-    .enlaces a{
-        width: 90px;
-    }
-}
-@media screen and (min-width:1001px) and (max-width: 1464px){
-    .home{ /*corresponde a Inicio*/
-        height: 130vh;
-        background-image: url(imagenes/20191228_165918.jpg);
-        background-position: center;
-        background-size: cover;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .fotoCarrusel img{ /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
-        width: 49.7%;
-        height: 250px;
-    }
-    .menu{
-        display: grid;
-        grid-template-columns: 1fr
-    }
-    .enlaces{
-        width: 150%;
-    }
-    .enlaces a{
-        width: 90px;
-    }
-}
+  .fotoCarrusel img {
+    /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
+    width: 49.7%;
+    height: 250px;
+  }
 
+  .galeri {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /*repetir 2 columnas, una fraccion c/u */
+    grid-template-rows: 300px 300px 300px 300px 450px;
+  }
+
+  .foto9 {
+    grid-column: 1/3;
+  }
+
+  .menu {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .enlaces {
+    width: 150%;
+  }
+
+  .enlaces a {
+    width: 90px;
+  }
+}
+@media screen and (min-width: 1001px) and (max-width: 1464px) {
+  .home {
+    /*corresponde a Inicio*/
+    height: 130vh;
+    background-image: url(imagenes/20191228_165918.jpg);
+    background-position: center;
+    background-size: cover;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .fotoCarrusel img {
+    /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
+    width: 49.7%;
+    height: 250px;
+  }
+
+  .menu {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .enlaces {
+    width: 150%;
+  }
+
+  .enlaces a {
+    width: 90px;
+  }
+}/*# sourceMappingURL=estilos.css.map */
