--- a/estilos.scss
+++ b/estilos.scss
@@ -51,6 +51,7 @@ label i{
     justify-content: space-between; //separa los cajas/contenedores
 
     .tobati{
+        background-color: rgba(0, 0, 0, .4);
         padding: 5px 5px 5px 0px;
         border-radius: 50%;
     }
@@ -58,35 +59,16 @@ label i{
     .logo{
         font-size: 20px;
         line-height: 50px;  
-        animation-duration: 10s; 
-        animation-name: parpadear;
-        animation-direction: alternate;
-        animation-iteration-count: infinite;
-    }
 
-    .espan1{
-        color: $colorLetra;
-        background-color: map-get($map: $paletas, $key: 'bandRojo');
     }
-    .espan2{
-        color: $colorLetra;
-        background-color: map-get($map: $paletas, $key: 'blanco');
-    }
-    .espan3{
-        color: $colorLetra;
-        background-color: map-get($map: $paletas, $key: 'bandAzul');
-    }
-}
-.logo:hover{
-    border: 1px solid rgba(24, 21, 21, 0.4);
-    text-decoration: none;
+    
 }
 .clima{
     position: relative;
     line-height: 110px;
     margin-left: 5px;
 }
-.menu .enlaces a {
+.enlaces a {
     list-style: none;
     font-size: 20px; //tamanio de letra
     margin: 0 10px ;
@@ -142,32 +124,45 @@ li{
     border-radius: 50%;
 }
 .fotoCarrusel{
-    // padding: 5px;
-    // background-color: white;
     border-radius: 15px;
 }
 //*Fin de Index*/
 //***** SERVICIOS *****/
 .section{
-    background-color: rgb(223, 243, 249);
-    border: 2px solid;   
     height: 400px;
     text-align: center;
 }
 .card{
-    margin: auto;
-    text-align: center;
+    height: 350px;
+    box-shadow: 3px 5px 5px rgba(3, 32, 51, .8);
+}
+.card-servicios{
+    background: var(--i);
+    background-size: cover;
+    font-size: 22px;
+}
+.card-body-servicios{
+    padding: 40px;
+    color: map-get($map: $paletas, $key: 'blanco');
+    background-color: rgba(0, 0, 0, .4);
+    opacity: 0;
+    transition: .9s;
+
+    &:hover{
+        opacity: 1;
+    }
 }
 //***NOTICIAS***/
-.secciones{
-    // display: grid;
-    // grid-template-columns: repeat(2, 1fr);
-    // grid-template-rows: 400px 400px 400px;
-    // grid-gap: 5px; 
-    width: 100%;
+.card-noticias{
+    margin: auto;
 }
+.card-noticias:hover{
+    transition: .9s;
+    background-color: rgba(0, 0, 0, .2);
+}
+
 //***FIN NOTICIAS***/
-//* Galeria de imagenes */
+//* GALERIA de imagenes */
 .galeri{
     margin-left: auto;
     margin-right: auto;
@@ -180,7 +175,7 @@ li{
     transform: scale(1.02);
     transition: all 0.9s;
 }
-.img-foto{
+.img-foto{ //Que ocupe el 100% de las grillas del GRID
     width: 100%;
     height: 100%;
 }
@@ -214,10 +209,6 @@ textarea{
 /* ************************************ */
 //* Pie de Pagina */
 footer{
-    //* display: grid;
-    // grid-template-columns: 1fr 1fr;
-    // grid-template-rows: 350px;
-    // gap: 5px; */
     text-align: center;
     margin-top: 30px;
 
@@ -266,14 +257,6 @@ footer{
 }
 //***ZONA DE ANIMACIONES***/
 
-@keyframes parpadear { //*LOGO*/
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    } 
-}
 @keyframes subida { //*BOTON DE SUBIR*/
     0%{
         opacity: 0;
@@ -286,8 +269,13 @@ footer{
 
 //**** ZONA DE MEDIA QUERIES ****/
 @media screen and (min-width:480px) and (max-width: 599px){
+    .menu .enlaces a{
+        width: 100px;
+        line-height: 60px;
+    }
+
     .home{ /*corresponde a Inicio*/
-        height: 60vh;
+        height: 120vh;
         background-image: url(imagenes/20191228_165918.jpg);
         background-position: center;
         background-size: cover;
@@ -312,9 +300,7 @@ footer{
         display: flex;
         flex-direction: column;
     }
-    .enlaces a{
-        width: 100px;
-    }
+
     .pie iframe{ //Achico los iframe en este punto de Quiebre
         height: 250px;
     }
@@ -322,7 +308,7 @@ footer{
 
 @media screen and (min-width:600px) and (max-width: 799px){
     .home{ /*corresponde a Inicio*/
-        height: 80vh;
+        height: 120vh;
         background-image: url(imagenes/20191228_165918.jpg);
         background-position: center;
         background-size: cover;
@@ -354,7 +340,7 @@ footer{
 }
 @media screen and (min-width:800px) and (max-width: 1000px){
     .home{ /*corresponde a Inicio*/
-        height: 100vh;
+        height: 160vh;
         background-image: url(imagenes/20191228_165918.jpg);
         background-position: center;
         background-size: cover;
@@ -386,7 +372,7 @@ footer{
 }
 @media screen and (min-width:1001px) and (max-width: 1464px){
     .home{ /*corresponde a Inicio*/
-        height: 130vh;
+        height: 200vh;
         background-image: url(imagenes/20191228_165918.jpg);
         background-position: center;
         background-size: cover;
