--- a/estilos.scss
+++ b/estilos.scss
@@ -209,18 +209,19 @@ textarea{
 /* ************************************ */
 //* Pie de Pagina */
 footer{
-    text-align: center;
     margin-top: 30px;
 
     p{
-        font-size: 26px;
+        font-size: 24px;
         text-transform: capitalize;
+        text-align: center;
     }
     iframe{
         margin-top: 0; //*elimino el margen superior del Iframe con respecto al Footer*/
-        border-radius: 18px;
+        border-radius: 10px;
         width: 100%;
-        height: 60%;
+        height: 250px;
+
     }
 }
 .pie{
@@ -228,11 +229,9 @@ footer{
     padding: 0;
 }
 .fotoPie{
-    border-radius: 18px;
+    border-radius: 10px;
 }
-#cont_04575148dc559c948cf6a66f3f7628f6{
-    border-radius: 18px;
-}
+
 //***BOTONES LATERALES DERECHO***/
 .ini{
     @include tamanio(35px,35px ,#000);
@@ -302,8 +301,15 @@ footer{
     }
 
     .pie iframe{ //Achico los iframe en este punto de Quiebre
+        width: 350px;
         height: 250px;
+        margin-left: 0px;
+
+        p{
+            text-align: center;
+        }
     }
+
 }
 
 @media screen and (min-width:600px) and (max-width: 799px){
