--- a/estilos.scss
+++ b/estilos.scss
@@ -113,6 +113,8 @@ li{
     margin-right: auto;
 }
 .conte-carru{
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 30px;
 }
 .carousel-indicators li{
@@ -126,9 +128,41 @@ li{
     img{
         object-fit: cover;
     }
-    object-fit: contain;
 }
 //*Fin de Index*/
+
+//**INICIO NOSOTROS**//
+.nosotros{
+    margin-top: 30px;
+    height: 500px;
+}
+.row{
+    margin-left: auto;
+    margin-right: auto;
+    height: auto;
+}
+.izquierda{
+    height: 500px;
+    background-image: url(imagenes/quienSoy.jpg);
+    background-size: cover;
+}
+.derecha{
+    h3{
+        text-align: center;
+        font-size: 40px;
+    }
+    p{
+        text-align: justify;
+        font-size: 30px;
+    }
+
+    &:hover{
+        transition: .9s;
+        background-color: rgba(188, 188, 188, 0.765);
+    }
+}
+//**FIN NOSOTROS**//
+
 //***** SERVICIOS *****/
 .section{
     height: 400px;
@@ -139,7 +173,7 @@ li{
     box-shadow: 3px 5px 5px rgba(3, 32, 51, .8);
 }
 .card-servicios{
-    background: var(--i);
+    background: var(--i); //--i:url(../imagenes/Servi-5.png)
     background-size: cover;
     font-size: 22px;
 }
@@ -162,15 +196,13 @@ li{
     transition: .9s;
     background-color: rgba(0, 0, 0, .2);
 }
-
 //***FIN NOTICIAS***/
+
 //* GALERIA de imagenes */
 .galeri{
-    margin-left: auto;
-    margin-right: auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 400px 350px 390px 390px; 
+    grid-template-rows: 400px 350px 390px 410px; 
     grid-template-areas:    "a  a  b  c"
                             "d  e  e  f"
                             "g  h  i  i"
@@ -226,6 +258,10 @@ li{
 
 //* Inicio Formularios Contacto */
 fieldset{
+    background-image: url(imagenes/sobre.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: auto;
     border: transparent;
 }
 legend{
@@ -237,11 +273,24 @@ form{
     margin: auto; //*queda centrado todo el formulario*/
     padding: 10px 20px; //* relleno vertical y horizontal*/
 }
+label{
+    margin-bottom: 0;
+    margin-top: 8px;
+}
 button{
     width: 100%;
     margin-bottom: 20px; //*margen arriba*/
     border: none;
+    border-radius: 5px;
+    box-shadow: 3px 5px 5px rgba(3, 32, 51, .8);
+    transition: transform 200ms, box-shadow 200ms;
+
+    &:active{
+        transform: translateY(4px) translateX(4px);
+        box-shadow: 3px 5px 5px rgba(3, 32, 51, .8);;
+    }
 }
+
 input, textarea{
     padding: 3px;
     width: 100%;
@@ -267,7 +316,10 @@ footer{
         margin-top: 0; //*elimino el margen superior del Iframe con respecto al Footer*/
         border-radius: 10px;
         width: 100%;
-        height: 250px;
+        height: 245px;  
+    }
+    img{
+        margin-bottom: 8px;
 
     }
 }
@@ -283,7 +335,7 @@ footer{
 .ini{
     @include tamanio(35px,35px ,#000);
     position: fixed;
-    right: 30px;
+    right: 28px;
     text-align: center;
     font-size: 20px;
     color: map-get($map: $paletas, $key: 'blanco' );
@@ -322,6 +374,21 @@ footer{
         background-size: cover;
         margin-left: auto;
         margin-right: auto;
+    }
+    .izquierda{
+        height: 300px;
+        background-image: url(imagenes/quienSoy.jpg);
+        background-size: cover;
+    }
+    .derecha{
+        h3{
+            text-align: center;
+            font-size: 30px;
+        }
+        p{
+            text-align: justify;
+            font-size: 20px;
+        }
     }
     .menu{
         display: grid;
@@ -431,6 +498,21 @@ footer{
         margin-left: auto;
         margin-right: auto;
     }
+    .izquierda{
+        height: 300px;
+        background-image: url(imagenes/quienSoy.jpg);
+        background-size: cover;
+    }
+    .derecha{
+        h3{
+            text-align: center;
+            font-size: 30px;
+        }
+        p{
+            text-align: justify;
+            font-size: 20px;
+        }
+    }
     .fotoCarrusel img{ /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
         width: 49.5%;
         height: 250px;
@@ -438,7 +520,98 @@ footer{
     .galeri{
         display: grid;
         grid-template-columns: (repeat(4, 1fr)); /*repetir 4 columnas, una fraccion c/u */
-        grid-template-rows: 350px 350px 350px 350px 350px 350px;
+        grid-template-rows: repeat(11, 350px);
+        grid-gap: 5px;
+        .foto1{
+            grid-column: 1/5;
+        }
+        .foto2{
+            grid-column: 1/5;
+            grid-row: 2/3;
+        }
+        .foto3{
+            grid-column: 1/5;
+            grid-row: 3/4;
+        }
+        .foto4{
+            grid-column: 1/5;
+            grid-row: 4/5;
+        }
+        .foto5{
+            grid-column: 1/5;
+            grid-row: 5/6;
+        }
+        .foto6{
+            grid-column: 1/5;
+            grid-row: 6/7;
+        } 
+        .foto7{
+            grid-column: 1/5;
+            grid-row: 7/8;
+        }
+        .foto8{
+            grid-column: 1/5;
+            grid-row: 8/9;
+        }
+        .foto9{
+            grid-column: 1/5;
+            grid-row: 9/10;
+        }
+        .foto10{
+            grid-column: 1/5;
+            grid-row: 10/11;
+        }
+        .foto11{
+            grid-column: 1/5;
+            grid-row: 11/12;
+        }
+    }
+    .menu{
+        display: grid;
+        grid-template-columns: 1fr;
+
+        .enlaces{
+            width: 150%;
+
+            a{
+                width: 90px;
+            }
+        }
+    }  
+    
+}
+@media screen and (min-width:800px) and (max-width: 1000px){
+    .home{ /*corresponde a Inicio*/
+        height: 160vh;
+        background-image: url(imagenes/20191228_165918.jpg);
+        background-position: center;
+        background-size: cover;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .izquierda{
+        height: 350px;
+        background-image: url(imagenes/quienSoy.jpg);
+        background-size: cover;
+    }
+    .derecha{
+        h3{
+            text-align: center;
+            font-size: 30px;
+        }
+        p{
+            text-align: justify;
+            font-size: 20px;
+        }
+    }
+    .fotoCarrusel img{ /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
+        width: 49.7%;
+        height: 250px;
+    }
+    .galeri{
+        display: grid;
+        grid-template-columns: (repeat(4, 1fr)); /*repetir 4 columnas, una fraccion c/u */
+        grid-template-rows: repeat(6, 350px);
         grid-gap: 5px;
         .foto1{
             grid-column: a;
@@ -494,73 +667,6 @@ footer{
                 width: 90px;
             }
         }
-    }  
-    .pie iframe{
-        height: 280px;
-    }
-}
-@media screen and (min-width:800px) and (max-width: 1000px){
-    .home{ /*corresponde a Inicio*/
-        height: 160vh;
-        background-image: url(imagenes/20191228_165918.jpg);
-        background-position: center;
-        background-size: cover;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .fotoCarrusel img{ /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
-        width: 49.7%;
-        height: 250px;
-    }
-    .galeri{
-        display: grid;
-        grid-template-columns: (repeat(3, 1fr)); /*repetir 3 columnas, una fraccion c/u */
-        grid-gap: 5px;
-        .foto1{
-            grid-column: a;
-        }
-        .foto2{
-            grid-area: b;
-        }
-        .foto3{
-            grid-area: c;
-        }
-        .foto4{
-            grid-area: d;
-        }
-        .foto5{
-            grid-area: e;
-        }
-        .foto6{
-            grid-area: f;
-        }
-        .foto7{
-            grid-column: 1/3;
-        }
-        .foto8{
-            grid-column: 3/4;
-        }
-        .foto9{
-            grid-column: 4/5;
-        }
-        .foto10{
-            grid-area: j;
-        }
-        .foto11{
-            grid-area: k;
-        }
-    }
-    .menu{
-        display: grid;
-        grid-template-columns: 1fr;
-
-        .enlaces{
-            width: 150%;
-
-            a{
-                width: 90px;
-            }
-        }
     }
 }
 @media screen and (min-width:1001px) and (max-width: 1464px){
@@ -571,6 +677,21 @@ footer{
         background-size: cover;
         margin-left: auto;
         margin-right: auto;
+    }
+    .izquierda{
+        height: 350px;
+        background-image: url(imagenes/quienSoy.jpg);
+        background-size: cover;
+    }
+    .derecha{
+        h3{
+            text-align: center;
+            font-size: 35px;
+        }
+        p{
+            text-align: justify;
+            font-size: 23px;
+        }
     }
     .fotoCarrusel img{ /*Achico las imagenes del Carrusel en este Punto de Quiebre*/
         width: 49.7%;
